1.3.3
- feature: add link to NGF
- feature: add stage value to scores

1.3.2
- feature: add all clearer title

1.3.1
- fix bug: a new member can't post his first score (avatarid not nullable)
- graphic: add twitter and rss buttons

1.3.0
- feature: Add 1cc feature

1.2.0
- graphic: no more score thumbnail in player page and game page
- graphic: use avatar of NGF if avatar_id is setted in database
- feature: soccer score are now handled
- graphic: unlock titles are sorted to the left of player page

1.1.1
- fix bug: Timeline RSS has not anymore same guid for all items.

1.1.0
- feature: Checkbox to post on NGF, or not
- feature: Picture is not post but put in score's URL
- fix bug: In HoF, when two players have same rank, the best "average" is the first one

1.0.1
- fix bug: titleService.hasScoreInGame

1.0.0
- fix bug: In "Add new score", the pre-selected game was not 3 Count Bout.
- feature: Score Comparator can compare chrono scores.
- feature: RSS timeline
- feature: Twitter timeline
- post scores in dedicated topics on NGF