@@ -1,5 +1,8 @@
 package com.anzymus.neogeo.hiscores.clients;
 
+import static java.text.MessageFormat.format;
+import static org.apache.commons.lang.StringUtils.isNotBlank;
+
 import com.anzymus.neogeo.hiscores.converter.ScoreConverter;
 import com.anzymus.neogeo.hiscores.domain.Score;
 
@@ -7,21 +10,27 @@ public class Messages {
 
 	private static final ScoreConverter SCORE_CONVERTER = new ScoreConverter();
 
+	private static final String MESSAGE_PATTERN = "{0} - [URL=\"{1}\"][SIZE=\"3\"]{2}[/SIZE][/URL]\n"
+			+ "[I]{3}{4}{5}[/I]\n"
+			+ "[SIZE=\"1\"]posté depuis [url]www.neogeo-hiscores.com[/url][/SIZE]";
+
 	public static String toMessage(Score score) {
-		String scoreValue = score.getValue();
-		scoreValue = SCORE_CONVERTER.getAsString(scoreValue);
+		String scoreValue = SCORE_CONVERTER.getAsString(score.getValue());
 		String message = score.getMessage();
 		String url = score.getPictureUrl();
+		String gameName = score.getGame().getName();
 
-		String postMessage = score.getGame().getName() + " - ";
-		postMessage += "[URL=\"" + url + "\"][SIZE=\"3\"]" + scoreValue
-				+ "[/SIZE][/URL]\n";
-		postMessage += "[I]" + message;
-		if (score.getAllClear()) {
-			postMessage += " - All clear!";
+		String stage = "";
+		if (isNotBlank(score.getStage())) {
+			stage = " - " + score.getStage();
 		}
-		postMessage += "[/I]\n";
-		postMessage += "[SIZE=\"1\"]posté depuis [url]www.neogeo-hiscores.com[/url][/SIZE]";
+		String allClear = "";
+		if (score.getAllClear()) {
+			allClear = " - All clear!";
+		}
+
+		String postMessage = format(MESSAGE_PATTERN, gameName, url, scoreValue,
+				message, stage, allClear);
 		return postMessage;
 	}
 
