@@ -1,6 +1,7 @@
 1.3.3
 - feature: add link to NGF
 - feature: add stage value to scores
+- feature: add stage info in NGF message
 
 1.3.2
 - feature: add all clearer title
